fix css for search page overflow

--- a/views/videoviewer/style.css
+++ b/views/videoviewer/style.css
@@ -1,7 +1,9 @@
 /*VideoViewer*/
 .videoViewer{
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
+    max-height: 100vh;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
 }
@@ -83,9 +85,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    max-height: 100vh;
-    max-width: 100vw;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 html{
